Clean up section 'The Factors'

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -1409,6 +1409,7 @@ Similar to cryokinesis, this sleight enables the exsurgent to accelerate the mol
 The alien species known as the Factors are unlike anything mankind has encountered so far (see \f[I]First\f[] \f[I]Contact: The Factors,\f[] p. 40).
 Though they are aloof and stand\-offish, their willingness and sometimes eagerness to deal with (parts of) transhumanity indicate either a keen interest on their part in transhuman affairs or some hidden ulterior agenda.
 Though the various transhuman factions have been similarly wary and cautious, and despite numerous communications difficulties and failures, an uneasy relationship has flowered over the past 8 years, facilitating some trade and exchange of knowledge.
+
 .SS Origin And Evolution
 
 The Factors have remained notoriously tight\-lipped about their origins, history, and the location of their homeworld.
@@ -1427,20 +1428,27 @@ Over time, this method of trapping prey spurred basic (practical) intelligence a
 
 Like mankind, the Factors suffered through and survived their own singularity event and encounter with the Exsurgent virus.
 Perhaps due to their cautious and calculating nature\[em]and their evolutionary experience in dealing with more powerful and dangerous opponents\[em]the Factors are resolutely determined not to make any similar mistakes as a species.
+
 .SS Xenobiology
 
 Since life on the Factors' home world developed differently than Earth and produced neither nucleic acids nor amino acids, Factor metabolic processes and \[lq]genetics\[rq] are very different from transhumanity's While little is known about the exact physiology of the Factors, due to the lack of captured or dead specimens to investigate (so far, no hypercorps or factions have risked an interstellar incident by abducting one to dissect ...
 so far) and their unwillingness to be examined by transhumans, most common knowledge about them is based on observational and forensics research during their encounters with transhumanity.
-.SS Individual Factors
+.RE
 
+\fBIndividual Factors\fR
+
+.RS 1
 Individual Factors resemble non\-translucent ambulatory amoeba, slime molds, or slugs.
 Though they \[lq]stand\[rq] only 0.3 meters tall, their body diameter ranges from 1.5 to 2 meters, they can be up to 2 meters long, and they can shape their body to change these dimensions.
 Instead of walking, they crawl or ooze from place to place by protruding finger\-like structures (so called \f[I]pseudopodia\f[]) that attach to the ground (or wall or ceiling) and which they use to pull and retract their rear forward (similar to cell migration Due to their malleable shape they are not as strongly affected by gravity as transhumans.
 
 Most Factors that have been encountered are dull ocher in color and are made from a gooey, gel\-like substance of unknown composition, though yellow glistening patches (which are temporary organelles) and bundles of fibers (some kind of muscular skeleton often become visible when they move.
 While all Factors are able to express versatile pseudopodia to manipulate and operate devices (and even attack), some subspecies possess, carry, or are able to develop additional differentiated limbs, cilia, or organs with specialized functions.
-.SS Factor Colonies
+.RE
 
+\fBFactor Colonies\fR
+
+.RS 1
 Unlike transhumans, Factors rarely act individually\[em] in fact, individuality is a concept somewhat foreign to Factors.
 Most Factors join together into a collective unit termed a \f[I]colony.\f[] A typical Factor colony is composed of hundreds or thousands of individual Factors that literally physically join together into a mass organism (resembling more a primordial soup than a gargantuan Factor).
 Individual Factors are indistinguishable from each other when merged into the supra\-structure of the colony, though individuals can form and break apart to accomplish different tasks.
@@ -1451,14 +1459,20 @@ This also allows for the easy transfer of knowledge and memories to all other fa
 If dismembered, blown apart, or otherwise separated individual Factors in a colony can regenerate and reconstitute at a rapid rate without loss of ability or memory.
 
 Factors reproduce when different members of the colony produce gametes that fuse, grow into spore stalks, and emit spores that later hatch and grow clones.
-.SS Biodiversity And Self\-Design
+.RE
 
+\fBBiodiversity And Self\-Design\fR
+
+.RS 1
 Factors colonies are known for their high biodiversity, featuring numerous sub\-groups (so called \f[I]phenotypes\f[]) that each have unique traits (cilia, apocrine glands, carapace\-like outer membrane) that give them an ecological advantage or a utilitarian aptitude for certain tasks.
 These traits are not random evolutionary features, but are the result of intentional bio\-engineering.
 The Factors have a strong grip on their own metabolisms and genetic expressions and can draw on an array of genetic building blocks and biotech techniques to modify themselves rapidly and massively to adapt to special conditions.
 Whether these modifications might have a purpose beyond function, such as for reproduction or self\-expression, is currently unknown.
-.SS Metabolism
+.RE
 
+\fBMetabolism\fR
+
+.RS 1
 Factors ships and habitats have transhuman\-friendly atmospheres with a slightly higher content of carbon dioxide and less nitrogen that mimics the conditions on the Factors' home planet.
 They don't breathe oxygen via lungs but absorb it via their outer \[lq]skin.\[rq] Since they can also use oxygen from other sources (minerals, liquids like water, and salts) to fuel their aerobic energy production (i.e., respiration), they can be considered functional anaerobes, meaning they can survive in environments without atmosphere, though they must usually supply themselves with food in order to do so.
 
@@ -1467,13 +1481,19 @@ On the first occasion, dishes and dinnerware were absorbed as well due to misund
 
 While Factors are omnivores similar to transhumans, they prefer immobilized live prey, which they enjoy absorbing internally and digesting, excreting those parts that cannot be used to fuel their metabolism.
 As such they can devour biomorphs and non\-metallic components of synthmorphs.
-.SS Perception
+.RE
 
+\fBPerception\fR
+
+.RS 1
 Factors don't perceive the world as transhumans do.
 They (usually) don't possess visual or acoustic organs to see or hear but have a number of sensory organs that grant them a 360\-degree awareness of their surroundings and enable them to interact with their environment similar to or in some cases even better than transhumans do.
 Their perception spectra includes the infrared part of the electromagnetic spectrum, magnetoception, a high resolution chemical\-gradient based \[lq]sight,\[rq] and keen haptic perceptions (including vibrations).
-.SS Communication
+.RE
 
+\fBCommunication\fR
+
+.RS 1
 Due to the lack of a vocal system, Factors use different methods of signaling and communication.
 Factors in physical contact exchange information by juxtacrine cellular, neurofilament interfacing, or by merging for information transfer.
 Over distance, Factors signal via pheromonal communication using airborne scents or chemical signals with different metabolic components.
@@ -1487,6 +1507,8 @@ Certain Factor phenotypes that deal with transhumanity have grown a a neurobiolo
 
 Long distance communication between Factors and transhumanity is achieved by normal means of farcasting communication.
 There are strong indications that Factors also take advantage of quantum\-entanglement communications as well, enabling Factor colonies and ships to share knowledge gained in different parts of the galaxy.
+.RE
+
 .SS Exosociology
 
 Factors are cooperative beings that exist as a collective colonial organization.
@@ -1501,8 +1523,11 @@ Individual Factors have no sense of personal gain or property and share equally 
 Factors do not experience emotions in the same manner that transhumans do, though being evolved creatures they are driven by certain instincts.
 They know and understand many of the same concepts that transhumans do thanks to evolution, such as competition/rivalry and altruism/cooperation.
 They also enjoy an understanding of basic ideas of philosophy such as aesthetics and metaphysics, though their conception of such topics is likely to differ from transhuman notions.
-.SS Art And Culture
+.RE
 
+\fBArt And Culture\fR
+
+.RS 1
 Due to their perceptual array, Factor \[lq]art\[rq] (creations and expressions that are appealing or attractive to their senses) is mostly chemical or tactile\-based.
 It can induce certain \[lq]mood\[rq] responses from individual Factors and whole colonies, ranging from agitated jittering and release of a Factor dust interpretable as \[lq]joy\[rq] to a tensing and solidifying of the whole body (and no chemical expulsion) that seems to relate to anger.
 Since they like and are susceptible to delicate compositions of different chemicals, certain bouquets and fragrances from liquids or volatiles such as wines and perfumes are both appealing and repulsive to Factors.
@@ -1510,8 +1535,11 @@ The same is also true for the natural smells of biomorphs, meaning that Factors 
 
 Factors do not comprehend most transhuman art, as it is mostly visual or auditory based (e.g., music, painting), though they do seem to have an appreciation for engineering, architecture, and some sculpture.
 While they have expressed interest in digitalized media out of a curiosity (or plan) to understand transhuman mindsets, they lack the organs and mental structure to access and comprehend it.
-.SS Technology
+.RE
 
+\fBTechnology\fR
+
+.RS 1
 Though the Factors repeatedly express dismay at transhumanity's low level of technology, they have failed so far to produce technology that is exceptionally far in advance.
 Some believe that the Factors are simply hiding their advanced technology in order to keep transhumans from stealing or copying it, while others believe this may simply be a posture taken by the Factors to facilitate bargaining.
 The Factors also claim that their technology would not interest transhumans because of their differences in physiology and mindset, and what little technology they have displayed is certainly specialized for Factor use (specialized neurofilament links, chemical signaling and Factor dust interfaces, etc.) and so unusable to most transhumans.
@@ -1520,9 +1548,12 @@ The Factors have traded some technology to transhumans, at expensive cost, thoug
 It is interesting to note that scans of Factor ships indicate their technology level, aside from the drives, is not all that more advanced than transhumanity.
 Also of note is that no two Factor ships have been alike, spurring some to believe that the Factors are in fact making use of ships acquired from other alien species\[em]perhaps abandoned derelicts that the Factors recovered and restored.
 Once again this has led some to believe that the Factors are using what to them are primitive craft in order to hide their real technology, while others are of the opinions that the Factors are simply scavengers and opportunists, piggybacking on the developments of other alien species.
-One interesting feature of Factor technology is that they use no artificial intelligences.
+
+One intriguing feature of Factor technology is that they use no artificial intelligences.
 This stems from their own singularity experience.
 Instead, Factors use infomorph versions of themselves or the accumulated processing power of their colony mind\-states to perform major computerized tasks.
+.RE
+
 .SS Factor Motivations
 
 The driving reason behind why the Factors made contact with transhumanity remains unclear and is open to gamemaster interpretation.
@@ -1530,11 +1561,14 @@ There is much speculation among transhuman factions.
 Some think the Factors are simply social creatures who are glad to make contact with another post\-singularity surviving civilization.
 Others believe the Factors are mercenary traders who somehow acquired FTL travel and use it to their full advantage, fleecing various trading partners who lack such capabilities (thus also explaining why the Factors eschew the Pandora Gates\[em]they disdain competition).
 Still others worry about secret, hidden motivations.
+
 Despite claiming to represent a number of alien civilizations, the Factors have been extremely reluctant to provide any other information on these other species or even to say how many there are.
 More recently, however, they have expressed a willingness to transport a small number of transhumans to other civilizations, though at great expense and with no guarantee to their safety or ability to return.
+
 So far, the Factors have made no mention of the ETI or the Exsurgent virus to transhumanity, though they are aware of their existence.
 Instead they have simply issued dire warning and admonitions regarding the development of seed AIs and use of the Pandora Gates.
 The Factors have in fact expressed an extreme reluctance to deal with any transhuman factions that are heavily invested in gatecrashing, such as Gatekeeper Corp.
+
 .SS The Factors In Game
 
 Factors should be rarely encountered in \f[I]Eclipse Phase.\f[] Most of their interactions with transhumanity occur remotely and infrequently.
@@ -1543,14 +1577,20 @@ It should be kept in mind that Factors are cautious to the point of being conser
 Factors are also quite cunning, having evolved from prey\-capturing predators, and still design complex machinations (traps in the metaphorical sense) to achieve their goals.
 In other words, Factors out to achieve something are likely to hatch an elaborate plot to get it and are not against recruiting transhumans.
 Also, drawing on their abilities to self\-modify themselves and technology developed on their own or picked up at other places in the universe, they can adapt to new situations very quickly.
-.SS Alien Mindset
+.RE
 
+\fBAlien Mindset\fR
+
+.RS 1
 Factors don't possess Lucidity stats and cannot be driven to madness like transhumans.
 
 Affecting Factors with psi is very difficult, as noted on p. 222.
 As of yet, Factors have not exhibited any psi abilities of their own.
-.SS Factor Combat
+.RE
 
+\fBFactor Combat\fR
+
+.RS 1
 Factors usually avoid direct combat but can defend themselves if they have to.
 They are only likely to act aggressively in situations where they have surprise, environmental or technological advantages, and/or superior numbers.
 Due to their cooperativism, Factors are rarely encountered alone, working en masse to eliminate potential threats.
@@ -1564,28 +1604,61 @@ In game terms, both such weapons inflict the minimum amount of damage possible.
 \f[B]Regeneration:\f[] Even if damaged, Factors regenerate very quickly.
 They heal SOM ÷ 10 (round up) damage every Action Turn.
 Wounds may not be healed this way, however.
-.SS Factor Computers
+.RE
 
+\fBFactor Computers\fR
+
+.RS 1
 Due to using completely alien protocols and system designs, Factor computers are essentially impossible to hack.
 They do, however, employ some devices that emulate transhuman computer systems for communication purposes, and these may be hacked as normal.
-.SS Factor Dust Toxin
+.RE
 
+\fBFactor Dust Toxin\fR
+
+.RS 1
 As noted above, Factors can deploy a type of chemical Factor dust that is is toxic to transhumans.
 Treat this as an area effect (cone) attack.
-\f[B]Type:\f[] Bio \f[B]Application:\f[] Inh \f[B]Onset Time:\f[] 1 Action Turn \f[B]Duration:\f[] 10 minutes (5 with medichines) \f[B]Effect:\f[] Severe coughing and respiratory distress, 1d10 damage per Action Turn for 5 Action Turns (or ongoing with continuous exposure), \[en]20 to all actions for 2 hours.
-Medichines reduce damage by half and modifier duration to 15 minutes.
-.SS Melding
 
+.HP 1
+\f[B]Type:\f[] Bio
+.RE
+.RS 1
+.HP 1
+\f[B]Application:\f[] Inh
+.RE
+.RS 1
+.HP 1
+\f[B]Onset Time:\f[] 1 Action Turn
+.RE
+.RS 1
+.HP 1
+\f[B]Duration:\f[] 10 minutes (5 with medichines)
+.RE
+.RS 1
+.HP 1
+\f[B]Effect:\f[] Severe coughing and respiratory distress, 1d10 damage per Action Turn for 5 Action Turns (or ongoing with continuous exposure), \[en]20 to all actions for 2 hours.
+Medichines reduce damage by half and modifier duration to 15 minutes.
+.RE
+
+\fBMelding\fR
+
+.RS 1
 Individual Factors may merge together to form larger units, much like masses of Factors form colonies.
 In game terms, use the highest stat possessed by the melded Factors, +2 for each additional Factor up to a maximum of +10.
 Durability (and Wound Thresholds) are added together.
+.RE
+
 .SS Factor Phenotypes
 
 A few examples of the different Factor phenotypes are described below.
-.SS Ambassadors
+.RE
 
+\fBAmbassadors\fR
+
+.RS 1
 The ambassador Factor phenotypes are the ones who most commonly handle direct interactions with transhumanity.
 Most likely to put transhumans at ease, these Factors feature a section of sensor nodules that loosely approximate a \[lq]face.\[rq]
+
 .TS
 box nospaces tab(|);
 r0 r r r r r r r r l0
@@ -1599,9 +1672,22 @@ r0 r r r r r r r r l0.
 | 60         | 1            | \[em]     | \[em]     | \[em]     | 30        | 7         | 45        |
 .TE
 
-\f[B]Movement Rate:\f[] 4/16 \f[B]Skills:\f[] Deception 70, Exotic Ranged Attack: Factor Dust 45, Fray 25, Free Fall 40, Hardware: Electronics 35, Infosec 35, Intimidation 50, Kinesics 40, Perception 50, Persuasion 60, Protocol 50, Research 35, Unarmed Combat 30 \f[B]Notes:\f[] Access Jacks, Chameleon Skin, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin)
-.SS Guardians
+.HP 1
+\f[B]Movement Rate:\f[] 4/16
+.RE
+.RS 1
+.HP 1
+\f[B]Skills:\f[] Deception 70, Exotic Ranged Attack: Factor Dust 45, Fray 25, Free Fall 40, Hardware: Electronics 35, Infosec 35, Intimidation 50, Kinesics 40, Perception 50, Persuasion 60, Protocol 50, Research 35, Unarmed Combat 30
+.RE
+.RS 1
+.HP 1
+\f[B]Notes:\f[] Access Jacks, Chameleon Skin, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin)
+.RE
+.RE
 
+\fBGuardians\fR
+
+.RS 1
 Guardian Factors serve as bodyguards for ambassadors or other Factors whenever they leave a Factor ship.
 
 .TS
@@ -1617,7 +1703,18 @@ r0 r r r r r r r r l0.
 | 70         | 1            | \[em]     | \[em]     | \[em]     | 50        | 10        | 75        |
 .TE
 
-\f[B]Movement Rate:\f[] 4/20 \f[B]Skills:\f[] Climbing 40, Exotic Ranged Attack: Factor Dust 65, Fray 50, Free Fall 40, Freerunning 40, Infiltration 40, Intimidation 50, Kinesics 20, Perception 50, Profession: Security Procedures 50, Unarmed Combat (Tentacles) 50 (60) \f[B]Notes:\f[] Chameleon Skin, Eelware, Electrical Sense, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin), Tentacle Whip (DV 2d10 + 1, AP \[en]1)
+.HP 1
+\f[B]Movement Rate:\f[] 4/20
+.RE
+.RS 1
+.HP 1
+\f[B]Skills:\f[] Climbing 40, Exotic Ranged Attack: Factor Dust 65, Fray 50, Free Fall 40, Freerunning 40, Infiltration 40, Intimidation 50, Kinesics 20, Perception 50, Profession: Security Procedures 50, Unarmed Combat (Tentacles) 50 (60)
+.RE
+.RS 1
+.HP 1
+\f[B]Notes:\f[] Chameleon Skin, Eelware, Electrical Sense, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin), Tentacle Whip (DV 2d10 + 1, AP \[en]1)
+.RE
+.RE
 
 .SH The Iktomi
 
