Clean up sections 'The Iktomi' and 'The Pandora Gates'

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -1718,8 +1718,7 @@ r0 r r r r r r r r l0.
 
 .SH The Iktomi
 
-Little is known about the alien race known as the Iktomi except for the ancient ruins they left behind on Echo V (p.
-109).
+Little is known about the alien race known as the Iktomi except for the ancient ruins they left behind on Echo V (p. 109).
 No Iktomi specimens have been found so far, though certain architectural remains suggest a predilection for web\-like structures.
 This has been bolstered by certain other features and relics which suggest these aliens had a segmented, multi\-legged arthropod\-type form\[em]thus their given name, after a Native American spider god.
 
@@ -1751,6 +1750,7 @@ It is speculated that gates could be physically moved, but no one is willing to 
 
 The arms comprising each gate's spherical cage have an abnormal\-looking organic\-seeming growth on their exterior surface in some areas, patterned in entrancing twists, curves, and whorls that in fact adhere to perfect mathematical formulas.
 It took some time for scientists to discover that this growth was in fact the gate's control systems, or so\-called \[lq]black box.\[rq] The interface developed to interact with this system is what allows gate controllers to manipulate gate functions.
+
 .SS The Wormhole
 
 When the gates themselves are open, a sphere appears within the central area that is not so much black as pure nothingness.
@@ -1764,6 +1764,7 @@ It is unclear whether or not these wormholes are all preexisting created when th
 Other more radical theories on how the gates function exist, though these are usually discounted as far less likely.
 One such theory suggests that the wormholes created are actually only zero\-width Planck\-scale connections across space\-time and that no matter is actually transferred\[em]only information.
 Instead, this theory suggests that anyone or anything entering the wormhole is in fact instantaneously scanned and disassembled and then their informational blueprint is transmitted as information across space to the other gate, which immediately reassembles an exact copy using some sort of powerfully advanced nano\- or femtotechnology Very little evidence supports this theory, however, and the disturbing implications it represents raises fierce opposition.
+
 .SS Operations
 
 Only a few people know that the Prometheans played a key role in developing the interface for the gate control systems, achieving breakthroughs in understanding that transhumanity was incapable of achieving on its own.
@@ -1782,6 +1783,7 @@ More than once operators have been unable to recall the codes for previously acc
 Entering a gate is like walking through a door, though it's impossible to see anything beyond the gate's surface.
 One moment you're entering the black sphere at your starting location and instantaneously you're exiting the sphere at your destination location.
 The true nature of the black sphere at the center of each gate is wildly speculated upon, and almost every gatecrasher describes a different textual experience.
+
 .SS Gatecrashing
 
 The various hypercorps and factions in control of a Pandora Gate engage in active exploration of extrasolar systems\[em]an activity termed gatecrashing.
@@ -1811,6 +1813,7 @@ Indeed, it is common for a connection to be closed when a gatecrashing expeditio
 
 Most of the gate\-controlling entities have established a system and infrastructure for making regular connections to extrasolar colonies and ferrying machinery and supplies through.
 Often this is handled by establishing very short connections, just enough time for a few people to transfer back and forth and/or to send a trainload of supplies through via tracks that run right up to the gate.
+
 .SS Anomalies
 
 Unfortunately for many unlucky gatecrashers, gate transfers have proven to be both unstable and glitchy.
@@ -1821,9 +1824,11 @@ In other instances, gate transfers have suffered horrible malfunctions, resultin
 Some expeditions report that stepping through a gate has interfered with their equipment, disabling it or creating other problems.
 A few gatecrashers have also reported losing memories after a gate transfer.
 Most of these problems have been chalked up to difficult controls and an imperfect understanding of gate functions, but some conspiracy theorists suggest that outside forces may be influencing gate operations.
+
 While the experience of passing through is instantaneous from an outside observer's perspective, many gatecrashers report a subjective time lag, where it feels as though minutes, days, or even weeks or months pass before they exit.
 Reports have varied from experiencing this period as a calm, meditative state to spooky accounts of being lost in blackness and surrounded by unseen whispering entities or more hellish experiences of encountering monstrous presences Though rare, some have passed through only to collapse in a gibbering heap, their sanity ripped away.
 A few report feeling that they have carried a presence with them ever since ...
+
 While the gamemaster can make use of any of these anomalies, they are also encouraged to use their imagination to generate truly creepy and strange experiences At the same time, gamemasters shouldn't make such experiences so prevalent that the players resist entering any gates or the novelty of such events runs dry.
 
 .SH Project Ozma
