--- a/12-game-information.6
+++ b/12-game-information.6
@@ -1850,6 +1850,7 @@ While the nominal concepts of a SETI project remained in public view, the comple
 
 Project Ozma now operates as the Planetary Consortium's high level threat assessment and response organization with immense power and authority as well as almost unlimited funding.
 Primarily focused on extraterrestrials, in reality Project Ozma is tasked with any potent threat to the Planetary Consortium or its interests (which includes secret threat groups, such as Firewall).
+
 .SS Methods
 
 Project Ozma's internal structure is much different from Firewall's, being organized more like a traditional black ops spy agency bureaucracy.
@@ -1863,9 +1864,18 @@ They are cunning, ruthless, manipulative, and capable of hatching extensive long
 Even in an age of omnipresent surveillance, they have the means to operate with complete secrecy and deniability.
 They also have access to cutting\-edge science and information that is classified beyond top secret.
 While the organization's primary motivation is the protection of the Planetary Consortium and inner system, they undoubtedly have other hidden agendas that groups like Firewall can only guess at.
-.RS
 
-\f[B]PROJECT OZMA RUMORS\f[]  Whether true or not, gamemasters can use the following rumors to help tailor Project Ozma for their campaign.
+.SS Project Ozma and Firewall
+
+Though Project Ozma and Firewall often see eye\-to\-eye concerning the nature of various threats, they are more often at odds: wary adversaries, acknowledging the prowess of the other, but never letting down their guard.
+This \[lq]at odds\[rq] mentality does not stem so much from the methods used (though most Firewall consider Project Ozma personnel explosive\-happy\-puppets that can't think their way out of a skin sack) as from conflicting agendas.
+Project Ozma does not trust an organization as powerful as Firewall because it does not have a rigid enough hierarchy and is outside of any known authority's control (namely themselves).
+Conversely Firewall doesn't trust Project Ozma as they are too close to the powerful inner system elites and their opposition to x\-risks is a more incidental side effect of more self\-serving goals.
+
+.SS Project Ozma rumors
+
+Whether true or not, gamemasters can use the following rumors to help tailor Project Ozma for their campaign.
+
 .IP \[bu] 2
 Project Ozma transcends even the Planetary Consortium's authority, operating as a supragovernmental agency under the direction of the inner system's inner circle of elites.
 .IP \[bu] 2
@@ -1887,12 +1897,6 @@ Project Ozma agents have exhibited signs of Exsurgent infection.
 .IP \[bu] 2
 Project Ozma has their own cadre of psi\-capable asyncs.
 .RE
-.SS Project Ozma And Firewall
-
-Though Project Ozma and Firewall often see eye\-to\-eye concerning the nature of various threats, they are more often at odds: wary adversaries, acknowledging the prowess of the other, but never letting down their guard.
-This \[lq]at odds\[rq] mentality does not stem so much from the methods used (though most Firewall consider Project Ozma personnel explosive\-happy\-puppets that can't think their way out of a skin sack) as from conflicting agendas.
-Project Ozma does not trust an organization as powerful as Firewall because it does not have a rigid enough hierarchy and is outside of any known authority's control (namely themselves).
-Conversely Firewall doesn't trust Project Ozma as they are too close to the powerful inner system elites and their opposition to x\-risks is a more incidental side effect of more self\-serving goals.
 
 .SH Prometheans
 
